--- a/face/Makefile.Release
+++ b/face/Makefile.Release
@@ -1115,6 +1115,29 @@ release/mainwindow.o: mainwindow.cpp mainwindow.h \
 		../../../opencv/build/include/opencv2/video/tracking.hpp \
 		../../../opencv/build/include/opencv2/video/background_segm.hpp \
 		ui_mainwindow.h \
+		../../../Qt/6.9.2/mingw_64/include/QtCore/QVariant \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/QApplication \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/qapplication.h \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/QLabel \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/qlabel.h \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/qframe.h \
+		../../../Qt/6.9.2/mingw_64/include/QtGui/qpicture.h \
+		../../../Qt/6.9.2/mingw_64/include/QtGui/qtextdocument.h \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/QLineEdit \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/qlineedit.h \
+		../../../Qt/6.9.2/mingw_64/include/QtGui/qtextcursor.h \
+		../../../Qt/6.9.2/mingw_64/include/QtGui/qtextformat.h \
+		../../../Qt/6.9.2/mingw_64/include/QtGui/qpen.h \
+		../../../Qt/6.9.2/mingw_64/include/QtGui/qtextoption.h \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/QMenuBar \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/qmenubar.h \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/qmenu.h \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/QPushButton \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/qpushbutton.h \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/qabstractbutton.h \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/QStatusBar \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/qstatusbar.h \
+		../../../Qt/6.9.2/mingw_64/include/QtWidgets/QWidget \
 		../../../Qt/6.9.2/mingw_64/include/QtCore/QCoreApplication \
 		../../../Qt/6.9.2/mingw_64/include/QtCore/QDebug \
 		../../../Qt/6.9.2/mingw_64/include/QtSql/QSqlQuery \
